test/compile_errors/err_derive_display_non_enum.w
//! expect-error: cannot derive Display for a non-enum type

@[derive(Display)]
type NotAnEnum { value: i32 }

fn main:
    let _ = NotAnEnum { value: 1 }
